src/main/java/com/example/jokerexamples/dataflow/good/output/EmailOutput.java
package com.example.jokerexamples.dataflow.good.output;public class EmailOutput {
}
