src/main/java/com/example/jokerexamples/dataflow/bad/service/EmailService.java
package com.example.jokerexamples.dataflow.bad.service;public class EmailService {
}
